...
            "state": "translated",
            "value": "Adicione uma nota (opcional)"
          }
        }
      }
    },
    "Add today's score": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Heutige Wertung hinzufügen"
...
            "state": "translated",
            "value": "Excluir"
          }
        }
      }
    },
    "delete.left": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "delete.left"
...
            "value": "完了"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "완료"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "完成"
...
            "state": "translated",
            "value": "VARIAÇÃO DO HUMOR"
          }
        }
      }
    },
    "Feed": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Feed"
...
            "state": "translated",
            "value": "MVP"
          }
        }
      }
    },
    "My Page": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "マイページ"
          }
...
            "value": "通知"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "알림"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "通知"
...
            "state": "translated",
            "value": "Qual é o seu Scoor?"
          }
        }
      }
    },
    "World": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Welt"
...
            "state": "translated",
            "value": "Tentar de novo"
          }
        }
      }
    },
    "닫기": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Schließen"
...
            "state": "translated",
            "value": "Atividade"
          }
        }
      }
    },
    "업데이트": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Aktualisieren"
...
            "state": "translated",
            "value": "Tranquilo"
          }
        }
      }
    },
    "저장": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Speichern"
...
            "state": "translated",
            "value": "This topic is new. Be the first to react."
          }
        }
      }
    },
    "행복": {
      "extractionState": "manual",
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "행복"
...
            "state": "translated",
            "value": "Os fins de semana têm média cerca de 10 pontos maior"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
